[tool.poetry]
name = "django-rest"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ptpython = "^3.0.17"
pylint = "^2.7.4"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
